Frontend/src/Components/books/Books.css
*{
    margin: 0;
    padding: 0;
}
body{
    background: #dcf3fd;
}

.booksParent{
    height: 100vh;
    width: 100%;
    margin: auto;
    background: #ffffff;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    overflow-y: auto;

    background-image: url(libraryBG.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
.booksParent::-webkit-scrollbar{
    display: none;
}
.booksContainer{
    height: 752px;
    width: 100%;
    margin: auto;
    background: #001821c2;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    overflow-y: auto;

}
.booksContainer::-webkit-scrollbar{
    display: none;
}

.addBookContainer, .removeBookContainer{
    height: fit-content;
    width: 500px;
    margin-left: 12px;
    margin-right: 12px;
    margin-top: 30px;
    background: rgba(117, 117, 117, 0.306);
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 8px;
    border-bottom-left-radius: 8px;
    backdrop-filter: blur(4px);
    display: flex;
    flex-direction: column;
    align-items: center;
}
.addBookTitle, .removeBookTitle{
    height: 60px;
    width: 100%;
    background: rgba(248, 164, 19, 0.655);
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 22px;
    color: white;
}

.addBookOptionBG{
    height: 70px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
    cursor: pointer;
}
.addBookbtn, .addBooksbtn{
    height: 30px;
    width: fit-content;
    color: rgb(178, 178, 178);
    background: rgb(140, 89, 0);
    border-radius: 4px;
    padding-left: 7px;
    padding-right: 7px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}
.addBookbtn:hover, .addBooksbtn:hover{
    color: white;
    background: rgb(233, 162, 41);
}

.addSingleBook, .addMultipleBooks{
    height: fit-content;
    width: 90%;
    background: rgba(131, 131, 131, 0.231);
    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.443);
    border-radius: 8px;
    display: none;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;
    overflow-y: auto;
}
.singleBookTitle, .multipleBookTitle{
    width: 100%;
    height: 50px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    color: rgb(255, 255, 255);
}
.bookID, .bookName, .Author, .topic1, .topic2, .topic3{
    height: 30px;
    width: 80%;
    margin-top: 4px;
    margin-bottom: 4px;
    outline: none;
    background: none;
    border: none;
    color: white;
    border-bottom: 1px solid rgb(255, 187, 0);
}
.submitSingleBookBG, .submitBooksFileBG, .submitRemoveBookBG{
    height: 40px;
    width: 100%;
    margin-top: 20px;
    margin-bottom: 20px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    text-align: center;
}
.submitSingleBook, .submitBookFile, .removeSubmit{
    height: 30px;
    width: 60%;
    color: rgb(184, 184, 184);
    background: rgb(160, 104, 0);
    border-radius: 8px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 17px;
    cursor: pointer;
}
.submitSingleBook:hover, .submitBookFile:hover, .removeSubmit:hover{
    color: white;
    background: orange;
}
.inputMultiBG{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}
.inputBooksFile{
    width: 100%;
    margin-left: 12%;
    margin-right: 12%;
    background: #ffffff5d;
    color: rgb(103, 58, 0);
    border-radius: 4px;
    margin-top: 20px;
}

.removeBookInputBG{
    height: fit-content;
    width: 90%;
    margin: 12px;
    border-radius: 8px;
    background: rgba(131, 131, 131, 0.231);
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.443);
}
.removeByID, .removeByName{
    height: 30px;
    width: 60%;
    margin: 9px;
    outline: none;
    border: none;
    background: none;
    border-bottom: 1px solid orange;
}
.or{
    height: 20px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}



.showAllBooksContainer{
    height: 500px;
    width: 1000px;
    margin-top: 60px;
    margin-left: 12px;
    margin-right: 12px;
    background: rgba(117, 117, 117, 0.763);
    border-radius: 12px;
    margin-bottom: 60px;
}
.showBooksTitle{
    height: 60px;
    width: 100%;
    background: rgba(248, 164, 19, 0.655);
    border-top-right-radius: 12px;
    border-top-left-radius: 12px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 22px;
    color: white;
}
.tableHeaderBG{
    height: 40px;
    width: 100%;
    background: #00000046;
    display: flex;
    flex-wrap: wrap;
}
.headerBookID, .headerBookName, .headerBookAuthor{
    flex: 1;
    height: 100%;
    background: rgba(27, 27, 27, 0.311);
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 17px;
    color: rgb(255, 210, 132);
}

.tableContainer{
    height: 400px;
    width: 100%;
    border-bottom-right-radius: 12px;
    border-bottom-left-radius: 12px;
    overflow-y: auto;
    display: flex;
    flex-wrap: wrap;
    background: #0000001d;
}
.tableContainer::-webkit-scrollbar{
    display: none;
}

table{
    width: 100%;
}
tbody{
    width: 100%;
}

.datarow{
    height: 40px;
    display: flex;
    flex-wrap: wrap;
    border-bottom: 1px solid white;
}

.dataID, .dataName, .dataAuthor{
    flex: 1;
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    color: rgb(207, 207, 207);
}

